# OpenVM-XMSS

./: .gitmodules  AGENTS.md  Cargo.toml  README.md  doc.md  hash-sig.md  plan.md  pqSNARK.md  problem.md  xmss_imp_plan.md
.kiro/specs/hash-sig-wrapper/: design.md  requirements.md  spec.json  tasks.md
.kiro/specs/migrate-to-hash-sig/: spec.json
.kiro/steering/: product.md  structure.md  tech.md
.serena/: project.yml
.serena/cache/rust/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  system_utilities.md  task_completion_checklist.md
guest/: Cargo.toml  input.json  openvm.toml  xmss-guest.app.proof
guest/src/: hash.rs  main.rs  tsl.rs  xmss_verify.rs
host/: Cargo.toml
host/benches/: aggregate.rs
host/src/: main.rs  shared_types.rs
host/src/commands/: benchmark.rs  benchmark_openvm.rs  mod.rs  prove.rs  report.rs  verify.rs
host/src/utils/: html.rs  input.rs  mod.rs  openvm.rs
lib/: Cargo.toml
lib/benches/: aggregate.rs  key_ops.rs  serialize.rs  xmss_benchmark.rs
lib/src/: hashsig_export.rs  lib.rs  main.rs
lib/src/benchmark/: metrics.rs  mod.rs  report.rs
lib/src/xmss/: aggregator.rs  config.rs  conversions.rs  epoch.rs  error.rs  message.rs  mod.rs  test_utils.rs  wrapper.rs
lib/src/zkvm/: host.rs  mod.rs
lib/tests/: integration_test.rs
openspec/changes/define-xmss-no-std-bridge/: tasks.md
openspec/changes/remove-xmss-wrapper/: tasks.md
openspec/changes/switch-xmss-to-poseidon/: tasks.md
openspec/specs/xmss-hashsig/: spec.md
report/: analysis.html  getting-started.html
shared/: Cargo.toml
shared/src/: lib.rs
src/: main.rs
src/xmss/: aggregator.rs  mod.rs  wrapper.rs
src/zkvm/: guest.rs
tests/: integration_test.rs
xmss-types/: Cargo.toml
xmss-types/src/: lib.rs
