[workspace]
members = ["host", "xmss-types", "lib"]
exclude = ["guest"]
resolver = "2"

[workspace.dependencies]
openvm = { git = "https://github.com/openvm-org/openvm.git", features = ["std"], default-features = false ,tag = "v1.4.0"}
serde = { version = "1.0", features = ["derive"], default-features = false }
hypercube-signatures = { git = "https://github.com/adust09/hypercube" }
