[workspace]
members = ["host", "xmss-types", "lib"]
exclude = ["guest"]
resolver = "2"

[workspace.dependencies]
openvm = { git = "https://github.com/openvm-org/openvm.git", features = ["std"], default-features = false ,tag = "v1.4.1"}
serde = { version = "1.0", features = ["derive"], default-features = false }
hashsig = { git = "https://github.com/b-wagn/hash-sig.git" }
