[workspace]
members = ["host", "xmss-types", "lib"]
exclude = ["guest"]
resolver = "2"

[workspace.dependencies]
openvm = { git = "https://github.com/openvm-org/openvm.git", features = ["std"], default-features = false ,tag = "v1.4.1"}
serde = { version = "1.0", features = ["derive"], default-features = false }
hashsig = { git = "https://github.com/b-wagn/hash-sig.git" }
bincode = { version = "1.3" }
p3-field = { git = "https://github.com/Plonky3/Plonky3.git", package = "p3-field", rev = "2117e4baac83269ace80c2aa109cec053f703842" }
p3-koala-bear = { git = "https://github.com/Plonky3/Plonky3.git", package = "p3-koala-bear", rev = "2117e4baac83269ace80c2aa109cec053f703842" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git", package = "p3-symmetric", rev = "2117e4baac83269ace80c2aa109cec053f703842" }
