[package]
name = "xmss-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
openvm = { git = "https://github.com/openvm-org/openvm.git", default-features = false,tag = "v1.4.0" }
xmss-types = { path = "../xmss-types", default-features = false }
openvm-sha2 = { git = "https://github.com/openvm-org/openvm.git" ,tag = "v1.4.0" }

[features]
default = []
cuda = [
    "openvm-sha2/cuda",
]
