[package]
name = "xmss-host"
version = "0.1.0"
edition = "2021"

[dependencies]
openvm = { workspace = true }
xmss-types = { path = "../xmss-types" }
xmss-lib = { path = "../lib" }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "aggregate"
harness = false
