[package]
name = "xmss-host"
version = "0.1.0"
edition = "2021"
rust-version = "1.87"

[dependencies]
openvm = { workspace = true }
xmss-types = { path = "../xmss-types" }
xmss-lib = { path = "../lib" }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
libc = { version = "0.2", optional = false }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
