[package]
name = "xmss-lib"
version = "0.1.0"
edition = "2021"
authors = ["XMSS for Ethereum Team"]
description = "XMSS signature aggregation library"
license = "MIT"

[dependencies]
# XMSS library from hash-sig
hashsig = { workspace = true }
rand = "0.8"
bincode = "1.3"
xmss-types = { path = "../xmss-types" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
