[package]
name = "xmss-lib"
version = "0.1.0"
edition = "2021"
rust-version = "1.87"
authors = ["XMSS for Ethereum Team"]
description = "XMSS signature aggregation library"
license = "MIT"

[dependencies]
# XMSS library from hash-sig
hashsig = { workspace = true }
rand = "0.9"
bincode = "1.3"
xmss-types = { path = "../xmss-types" }
sha2 = "0.10"
thiserror = "2.0"
serde = { workspace = true, features = ["alloc"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.9"
