[package]
name = "xmss-lib"
version = "0.1.0"
edition = "2021"
rust-version = "1.87"
authors = ["XMSS for Ethereum Team"]
description = "XMSS signature aggregation library"
license = "MIT"

[dependencies]
# XMSS library from hash-sig
hashsig = { workspace = true }
sha2 = "0.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.9"
